[FIX] UI bug on small screen

--- a/source/app/static/assets/css/atlantis.css
+++ b/source/app/static/assets/css/atlantis.css
@@ -438,7 +438,7 @@ body {
 }
 
 .main-header {
-    background: #ffffff;
+    background: #0963d5;
     min-height: 60px;
     width: 100%;
     position: fixed;
